# Money-printer

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  ROADMAP.md  run_whole_system.ps1
.claude/skills/add-strategy/: SKILL.md
.claude/skills/add-venue/: SKILL.md
.claude/skills/bootstrap-workspace/: SKILL.md
.claude/skills/implement-spec/: SKILL.md
.claude/skills/self-review/: SKILL.md
.github/workflows/: ci.yml
collectors/: Cargo.toml
collectors/src/: backoff.rs  backpressure.rs  binance.rs  book_sync.rs  bybit.rs  coinbase.rs  collector.rs  hyperliquid.rs  json.rs  kraken.rs  lib.rs  normalize.rs  okx.rs  rate.rs  rng.rs  staleness.rs  transport.rs  ws.rs
collectors/tests/: bybit_fixtures.rs  collector_chaos.rs  venue_fixtures.rs
core/: Cargo.toml
core/src/: arena.rs  book.rs  codec.rs  event.rs  exec.rs  hash.rs  lib.rs  log.rs  mode.rs  ring.rs  rng.rs  symbol.rs  time.rs  wall_clock.rs
core/tests/: event_schema.rs
docs/: AGENT_FORCE_MULTIPLIERS.md  ARCHITECTURE_BRAINSTORM.md  AUDIT-2026-07-11.md  BACKLOG.md  SYSTEM_BLUEPRINT.md
features/: Cargo.toml  features.toml.example
features/src/: bar.rs  catalog.rs  config.rs  engine.rs  hit_journal.rs  lib.rs  screener.rs
features/tests/: feature_engine.rs
llm/: Cargo.toml  providers.example.toml
llm/src/: anthropic.rs  cohere.rs  config.rs  error.rs  gemini.rs  grounding.rs  http.rs  lib.rs  openai_compat.rs  openai_family.rs  provider.rs
llm/tests/: provider_fixtures.rs
oms/: Cargo.toml
oms/src/: lib.rs  reconcile.rs  state.rs
oms/tests/: oms.rs
ops/: Cargo.toml  compose.yaml  deploy.md  restore-drill.sh
ops/ci/: guardrails.sh
ops/runbooks/: README.md  clock-skew.md  collector-down.md  determinism-diff.md  disk-high.md  keyfile-perms.md  killswitch-tripped.md  oms-down.md  process-deadman.md  recon-diverged.md  stream-gap.md  unknown-order.md
ops/scripts/: daily_maintenance.sh
ops/src/: alert.rs  bot.rs  deadman.rs  journal.rs  latch.rs  lib.rs  registry.rs  report.rs  watch.rs
ops/systemd/: brief.service  brief.timer  collector@.service  grading.service  grading.timer  mp-collector@.service  opsd.service
ops/tests/: ops_slice.rs
research/: README.md  archive_data.py  brief.py  conftest.py  event_study.py  grading.py  grading_job.py
research/mp_data/: __init__.py  coverage.py  reader.py
research/prompts/: daily-brief.md
research/tests/: test_brief.py  test_coverage.py  test_event_study.py  test_grading.py  test_jobs_and_reader.py
risk/: Cargo.toml  risk.toml.example
risk/src/: allocator.rs  config.rs  gate.rs  governor.rs  kelly.rs  killswitch.rs  lib.rs  sizing.rs
risk/tests/: execution.rs  risk.rs
sim/: Cargo.toml
sim/examples/: gen_log.rs
sim/src/: account.rs  decision_log.rs  engine.rs  error.rs  gates.rs  harness.rs  lib.rs  metrics.rs  tracker.rs
sim/tests/: backtest.rs  fill_models.rs  harness.rs  regressions.rs
specs/: 000-conventions.md  001-event-schema.md  002-collectors.md  003-storage.md  004-feature-engine.md  005-backtester.md  006-strategy-api.md  007-execution.md  008-risk-sizing.md  009-ops-alerting.md  010-research-llm.md  011-terminal.md  012-zero-copy-pipeline.md  013-ws-backpressure.md  014-event-log-fsync.md  015-carry-v1.md  016-feature-materialization.md  017-screener-grading.md  018-mode-switch.md  019-collector-binary.md  020-binance-snapshot.md  021-bot-journal.md  022-screener-cadence.md  023-string-interning.md  README.md
storage/: Cargo.toml
storage/src/: compactor.rs  dataset.rs  feature_store.rs  layout.rs  lib.rs  manifest.rs  parquet_trades.rs  prune.rs  scd2.rs
storage/tests/: storage.rs
strategies/: Cargo.toml
strategies/carry-v1/: hypothesis.md
strategies/liq-fade-v1/: hypothesis.md
strategies/src/: carry_v1.rs  examples.rs  funnel.rs  lib.rs  strategy.rs
strategies/tests/: strategy_funnel.rs
strategies/trend-breadth-v1/: hypothesis.md
