[workspace]
resolver = "2"
members = ["core", "collectors", "storage", "features", "risk"]

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/thwinlinhanit-dev/Money-printer"
rust-version = "1.80"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1.3"
thiserror = "1"
tracing = "0.1"
smallvec = { version = "1", features = ["serde", "union"] }
crc32fast = "1"
proptest = "1"

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "warn"

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "warn"
