[package]
name = "mp-collectors"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Venue WS collectors → normalized events — spec 002 (offline core; live transport deferred)"

[lib]
name = "mp_collectors"
path = "src/lib.rs"

[features]
# Live public market-data WebSocket transport (tokio + tokio-tungstenite).
# Off by default so the pure normalization/logic builds with no network stack.
# PD-1: public data only — this transport never sends orders or auth.
live-ws = ["dep:tokio", "dep:tokio-tungstenite", "dep:futures-util", "dep:url", "dep:rustls"]
# Live HTTP client for REST snapshot fetches (spec 020). Separate from live-ws
# so snapshot fetch can be added independently.
live-http = ["dep:reqwest"]

[dependencies]
mp-core = { path = "../core" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
smallvec.workspace = true
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time", "sync"], optional = true }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"], optional = true }
rustls = { version = "0.23", default-features = false, features = ["ring"], optional = true }
futures-util = { version = "0.3", optional = true }
url = { version = "2", optional = true }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"], optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[lints]
workspace = true

