[package]
name = "mp-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Event types, clock, ring buffers, event log — spec 001"

[lib]
name = "mp_core"
path = "src/lib.rs"

[dependencies]
serde.workspace = true
bincode.workspace = true
thiserror.workspace = true
tracing.workspace = true
smallvec.workspace = true
crc32fast.workspace = true

[dev-dependencies]
proptest.workspace = true

[lints]
workspace = true
