[package]
name = "mp-features"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Streaming feature engine — spec 004 (deterministic, no I/O, no wall clock)"

[lib]
name = "mp_features"
path = "src/lib.rs"

[dependencies]
mp-core = { path = "../core" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
toml.workspace = true
tracing.workspace = true

# No network, no wall clock — features are pure functions of events (PD-3/PD-4).

[dev-dependencies]
smallvec.workspace = true

[lints]
workspace = true
