[package]
name = "mp-llm"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "LLM provider abstraction for research/intelligence agents — spec 010 (grounding contract; live transport feature-gated)"

[lib]
name = "mp_llm"
path = "src/lib.rs"

[features]
# Live HTTP transport (blocking reqwest + rustls). Off by default so the pure
# request-build / response-parse logic builds and tests with no network stack.
# PD-2: this transport never reads or logs API keys — they arrive resolved.
live-http = ["dep:reqwest"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"], optional = true }

[lints]
workspace = true
