[package]
name = "mp-oms"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Order state machine + reconciler — spec 007 (venue adapters deferred)"

[lib]
name = "mp_oms"
path = "src/lib.rs"

[dependencies]
mp-core = { path = "../core" }
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true

# This crate is the venue boundary: it MAY take a network dependency later
# (the live venue adapter). This slice is the transport-agnostic state machine +
# reconciler, tested with no network. Credentials load here only (CONV-17).

[lints]
workspace = true
