[package]
name = "mp-risk"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Risk & sizing engine — spec 008 (vol targeting, quarter-Kelly, DD governor, allocator)"

[lib]
name = "mp_risk"
path = "src/lib.rs"

[dependencies]
mp-core = { path = "../core" }
serde.workspace = true
tracing.workspace = true

# Pure math over core types. No network, no venue access (PD-4).

[dev-dependencies]
proptest.workspace = true

[lints]
workspace = true
