[package]
name = "mp-storage"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Parquet cold store, quality manifests, dataset reader — spec 003"

[lib]
name = "mp_storage"
path = "src/lib.rs"

[dependencies]
mp-core = { path = "../core" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
arrow = { version = "53", default-features = false }
parquet = { version = "53", default-features = false, features = ["arrow", "zstd"] }

[lints]
workspace = true
